<resources>
    <string name="app_name">Snake Broadcast</string>

    <string name="tv_select_basic">Select your streamer Basic</string>
    <string name="tv_select">Select your streamer Advanced</string>
    <string name="hint_rtmp">rtmp://yourendpoint</string>
    <string name="start_button">Start stream</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <!--menu-->
    <string name="filters">Filters</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="sepia">Sepia</string>
    <!--gl menu-->
    <string name="enable_disable_fxaa">enable/disable FXAA</string>
    <!--filters-->
    <string name="no_filter">No filter</string>
    <string name="analog_tv">Analog TV</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="black">Black</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="chroma">Chroma</string>
    <string name="circle">Circle</string>
    <string name="color">Color</string>
    <string name="contrast">Contrast</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="glitch">Glitch</string>
    <string name="gif">Gif</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image">Image</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="rgb_saturate">RGB saturate</string>
    <string name="ripple">Ripple</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="surface_filter">Surface filter</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="snow">Snow</string>
    <string name="swirl">Swirl</string>
    <string name="temperature">Temperature</string>
    <string name="text">Text</string>
    <string name="zebra">Zebra</string>
    <!--drawer-->
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="fps">FPS</string>
    <string name="on_off_flashlight">On/Off flashlight</string>
    <string name="on_off_auto_focus">On/Off auto focus</string>
    <string name="camera_front">Camera front</string>
    <string name="camera_back">Camera back</string>
    <string name="pause_record">Pause record</string>
    <string name="resume_record">Resume record</string>
    <string name="orientation_90">Orientation 90</string>
    <string name="orientation_180">Orientation 180</string>
    <string name="orientation_270">Orientation 270</string>
    <string name="orientation_0">Orientation 0</string>
    <string name="disable_audio">Disable Audio</string>
    <string name="enable_audio">Enable Audio</string>
    <string name="setting">Setting</string>
    <string name="resolution_width">Resolution width</string>
    <string name="resolution_height">Resolution height</string>
    <string name="bitrate">Bitrate</string>
    <string name="dpi">DPI</string>
    <string name="ok">OK</string>
    <string name="get_best_setting">Get best setting</string>
    <string name="audio_sample_rate">Audio sample rate</string>
    <string name="audio_is_stereo">Audio Is Stereo</string>
    <string name="audio_echo_canceler">Audio Echo Canceler</string>
    <string name="audio_noise_suppressor">Audio Noise Suppressor</string>
    <string name="resolution_camera">Resolution camera</string>
    <string name="take_photo">Take photo</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="setting_msg">After screen orientation is changed, you must update the config in Setting before go live again</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="broadcast_basic">BroadCast Basic</string>
    <string name="broadcast_advanced">BroadCast Advanced</string>
    <string name="broadcast_background_basic">BroadCast Basic (Background)</string>
    <string name="broadcast_background_advanced">BroadCast Advanced (Background)</string>
    <string name="display_basic">Display Basic</string>
    <string name="display_advanced">Display Advanced</string>
    <string name="enablefacedetection">enableFaceDetection</string>
    <string name="disablefacedetection">disableFaceDetection</string>
    <string name="enablevideostabilization">enableVideoStabilization</string>
    <string name="disablevideostabilization">disableVideoStabilization</string>
    <string name="getcamerafacing">getCameraFacing</string>
    <string name="enablelantern">enableLantern</string>
    <string name="disablelantern">disableLantern</string>
    <string name="enableautofocus">enableAutoFocus</string>
    <string name="disableautofocus">disableAutoFocus</string>
    <string name="warning">Warning</string>
    <string name="live_background_msg">When livestreaming in background mode, you only start by back camera by default</string>
    <string name="flash_light_background_msg">The flashlight will be disable automatically when the camera preview is lost focus</string>
    <string name="get_stable_resolution_camera">Get stable resolution camera</string>
    <string name="retry_setting">Retry setting</string>
    <string name="is_auto_retry">Is Auto retry?</string>
    <string name="delay_retry_in_s">Delay retry (in s)</string>
    <string name="number_of_retry">Number of retry</string>
</resources>
