<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.uiza.broadcast.UZBroadCastView
        android:id="@+id/uzBroadCastView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etRtpUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rtmp"
        android:padding="@dimen/margin_padding_medium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/hsv"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_medium">

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tiny" />

        <TextView
            android:id="@+id/tvFps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_padding_medium"
            android:paddingEnd="@dimen/margin_padding_medium"
            android:paddingBottom="@dimen/margin_padding_large">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bScreenRotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_rotation" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/setting" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bStartTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/start_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bDisableAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/disable_audio"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bEnableAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/enable_audio"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/start_record" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bRecordPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/pause_record" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bRecordResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/resume_record" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bSwitchCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/switch_camera_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bSwitchCameraFront"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/camera_front" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bSwitchCameraBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/camera_back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bOnOffFlashFlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/on_off_flashlight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bOnOffAutoFocus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/on_off_auto_focus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bOrientation90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/orientation_90" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bOrientation180"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/orientation_180" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bOrientation270"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/orientation_270" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bOrientation0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/orientation_0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bTakePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:text="@string/take_photo" />

        </LinearLayout>
    </HorizontalScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>
